k8s-junk/14-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase-rv-hub-ingress
spec:
  rules:
  - host: hub.showcaserv.com
    http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 3001
      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: webapi-service
            port:
              number: 5000
      - path: /email
        pathType: Prefix
        backend:
          service:
            name: email-service
            port:
              number: 6000
